Bug 89308 - PIVOTTABLE: Can't update pivot table destination
Summary: PIVOTTABLE: Can't update pivot table destination
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-11 13:54 UTC by Marina Latini (SUSE)
Modified: 2024-12-17 12:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marina Latini (SUSE) 2015-02-11 13:54:29 UTC
Problem description:
If you try to update the position of a pivot table Calc duplicates the pivottable.

Steps:
1) Create a new spreadsheet
2) Select 4 cells (A1:B2)
3) Click on Data -> Pivot Table -> Create...
4) Use "Current Selection"
5) Click ok
6) On the next dialog click ok
7) Right click on the pivot table
8) Click on "Edit Layout..."
9) Expand the section "Source and Destination"
10) Change the destination from default ($'Pivot Table_Sheet1_1'.$A$1) to $'Pivot Table_Sheet1_1'.$A$10

Current behaviour:
* Calc duplicates the pivot table
Expected behaviour:
* Calc moves the pivot table

Tested on:

* Version: 3.6.7.2 
* Build ID: e183d5b
* Locale: it_IT
* OS: Windows 7 Home Premium SP1 x86
* OS: Ubuntu 14.04.2 LTS x86_64

* Version: 4.2.8.2
* Build ID: 48d50dbfc06349262c9d50868e5c1f630a573ebd
* Locale: it_IT
* OS: Windows 7 Home Premium SP1 x86
* OS: Ubuntu 14.04.2 LTS x86_64

* Version: 4.3.6.1
* Build ID: 9629686a67dd1f357477c13325e45a66f3452bb9
* Locale: it_IT
* OS: Ubuntu 14.04.2 LTS x86_64

* Version: 4.4.0.3
* Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7
* locale: it_IT
* OS: Windows 7 Home Premium SP1 x86
* OS: Ubuntu 14.04.2 LTS x86_64

* Version: 4.5.0.0.alpha0+
* Build ID: 1b046598e02bbf479a9a13ed61a5760944c5c891
* TinderBox: Win-x86@42, Branch:master, Time: 2015-02-11_06:54:31
* Locale: it_IT
* OS: Windows 7 Home Premium SP1 x86

* Version: 4.5.0.0.alpha0+
* Build ID: 52d1de87e9a77fc7929309b0365bd786406ce022
* TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-02-04_01:50:43
* Locale: it_IT
* OS: Ubuntu 14.04.2 LTS x86_64
Comment 1 Joel Madero 2015-02-11 15:00:03 UTC
Confirmed:

Ubuntu 14.10 x64
LibreOffice 4.4.0.3

Marking as:
New
Minor - can slow down professional quality work but will not prevent it.
Low - workaround is pretty straight forward (just delete the original one)

Possibly an easy hack - suggesting it for that.
Comment 2 Joel Madero 2015-02-11 15:08:09 UTC
same problem in 3.3 - marking as inherited from OOo.
Comment 3 Robinson Tryon (qubit) 2015-12-13 11:21:08 UTC Comment hidden (obsolete)
Comment 4 Commit Notification 2016-01-27 10:13:35 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b9dd2446c33fda77fa18eec7ae86831af9c82e6

tdf#89308: Delete old copy of pivot table on moving destination

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.