tdf#89308: Delete old copy of pivot table on moving destination

except for the case when origin of the new range lies within
the old range (Calc doesn't update the table then, this needs
to be fixed separately)

Change-Id: I554a347a94df830ac1fd651c30cf8e83279cdef8